--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-API_ID=
-API_HASH=
-BOT_TOKEN=
-BOT_UN=
+API_ID=29909260
+API_HASH=b50fc1417139325122a146ef588ec212
+BOT_TOKEN=6546362014:AAEx6SI0veYCMKHjH5HrgXCcb2X8VTNgiyM
+BOT_UN=AKDCONVERTERBOT
