--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-API_ID=
-API_HASH=
-BOT_TOKEN=
-BOT_UN=
+API_ID=22882517
+API_HASH=fdbcfbaf87d91ca8f6cea9badd4f8876
+BOT_TOKEN=6546362014:AAEx6SI0veYCMKHjH5HrgXCcb2X8VTNgiyM
+BOT_UN=AKDCONVERTERBOT
